--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-EMAILJS_SERVICE_ID=service_yepi8uu
-EMAILJS_TEMPLATE_ID=template_s1jmd7r
-EMAILJS_PUBLIC_KEY=z6OeY42qSulJ-8EcS
+# .gitignore
+.env
+.env.local
+node_modules/
+dist/
